kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:stable-alpine3.23
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: homework-volume
              mountPath: /homework
            - name: configmap-volume
              mountPath: /homework/conf
          command:
            - sh
            - -c
            - |
              echo "server {
                listen 8000;
                server_name localhost;
                location / {
                    root /homework;
                    index index.html;
                }
                location ~/conf/ {
                    autoindex on;
                    root /homework;
                    default_type "text/html";
                }

              }" > /etc/nginx/conf.d/homework.conf
              touch /tmp/healthy
              nginx -g "daemon off;"
          lifecycle:
            preStop:
              exec:
                command:
                  - sh
                  - -c
                  - |
                    echo "Removing index.html from /homework before termination..."
                    rm -f /homework/index.html
                    echo "File /homework/index.html deleted."
                    rm -f /tmp/healthy
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
              httpHeaders:
              - name: Custom-Header
                value: Awesome
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: homework-volume
          persistentVolumeClaim:
            claimName: kuber-pvc
        - name: configmap-volume
          configMap:
            name: nginx-config
            items:
              - key: file
                path: file
