kubernetes-volumes/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-statefulset
  namespace: homework
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 5
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:stable-alpine3.23
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: homework-volume
              mountPath: /homework
          command:
            - sh
            - -c
            - |
              echo "server {
                listen 8000;
                server_name localhost;
                root /homework;
                index index.html;
              }" > /etc/nginx/conf.d/homework.conf
              touch /tmp/healthy
              nginx -g "daemon off;"
          lifecycle:
            preStop:
              exec:
                command:
                  - sh
                  - -c
                  - |
                    echo "Removing index.html from /homework before termination..."
                    rm -f /homework/index.html
                    echo "File /homework/index.html deleted."
                    rm -f /tmp/healthy
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
              httpHeaders:
              - name: Custom-Header
                value: Awesome
            initialDelaySeconds: 5
            periodSeconds: 5
  volumeClaimTemplates:
  - metadata:
      name: homework-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "custom"
      resources:
        requests:
          storage: 500Mi
