kubernetes-volumes/nodeportsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: homework
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8000
    nodePort: 31439
  selector:
    app: nginx
